--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<h1>Hello World</h1>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Homework 33</title>
+</head>
+<body>
+<header class="header">
+    <div class="container">
+        <div class="title">
+            <h2>The world’s largest resource for data centers, customers, vendors and those seeking employment.</h2>
+        </div>
+        <div class="data-block">
+            <span class="numbers">4,347</span>
+            <span class="numbers-title">Data Centers</span>
+        </div>
+    </div>
+</header>
+
+</body>
+</html>
