--- a/index.html
+++ b/index.html
@@ -21,6 +21,40 @@
         </div>
     </div>
 </header>
-
+<div class="content-block">
+    <div class="container">
+        <div class="content-wrap">
+            <div class="col col-1">
+                <h3>Directory</h3>
+                <h4>Map View, Locations,
+                    Companies, Vendors</h4>
+                <p>Pellentesque ac dui elit. Ut sollicitudin faucibus tellus ut rutrum. Nam pretium fringilla
+                    dignissim.</p>
+                <a href="#">Read More</a>
+            </div>
+            <div class="col col-2">
+                <h3>Real Estate</h3>
+                <h4>Listings, Recently Sold Market Stats, List A Data Center</h4>
+                <p>Pellentesque ac dui elit. Ut sollicitudin faucibus tellus ut rutrum. Nam pretium fringilla
+                    dignissim.</p>
+                <a href="#">Read More</a>
+            </div>
+            <div class="col col-3">
+                <h3>Employment</h3>
+                <h4>Data Center Jobs, Post A Job Post A Job</h4>
+                <p>Pellentesque ac dui elit. Ut sollicitudin faucibus tellus ut rutrum. Nam pretium fringilla
+                    dignissim.</p>
+                <a href="#">Read More</a>
+            </div>
+            <div class="col col-4">
+                <h3>Deals</h3>
+                <h4>Colocation, Cloud, Dedicated Servers, Hardware, Post A Deal</h4>
+                <p>Pellentesque ac dui elit. Ut sollicitudin faucibus tellus ut rutrum. Nam pretium fringilla
+                    dignissim.</p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
