--- a/index.html
+++ b/index.html
@@ -56,5 +56,39 @@
         </div>
     </div>
 </div>
+<footer class="footer">
+    <div class="footer-title">
+        <h2>Resources & Tools</h2>
+    </div>
+
+    <div class="container">
+        <div class="footer-wrap">
+            <div class="footer-col">
+                <i></i>
+                <a href="#">Colocation Calculator</a>
+            </div>
+            <div class="footer-col">
+                <i></i>
+                <a href="#">Special Offers & Discounts!</a>
+            </div>
+            <div class="footer-col">
+                <i></i>
+                <a href="#">Consulting and Network Design</a>
+            </div>
+            <div class="footer-col">
+                <i></i>
+                <a href="#">Contact Us Today!</a>
+            </div>
+            <div class="footer-col">
+                <i></i>
+                <a href="#">Buy Cloud Servers Online</a>
+            </div>
+            <div class="footer-col">
+                <i></i>
+                <a href="#">Online File Storage, Backup and DR</a>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
